--- a/styles/style.css
+++ b/styles/style.css
@@ -13,9 +13,14 @@ html {
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;  
 }
 
 h1,
@@ -37,15 +42,378 @@ ol {
   list-style: none;
 }
 
-/* Кастомный скроллбар */
-.custom-scrollbar::-webkit-scrollbar {
-  width: 4px;
+.content {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  gap: 30px;
+  margin-top: 10px;
 }
 
-.custom-scrollbar::-webkit-scrollbar-track {
-  background: rgb(217 217 217 / 10%);
+/* section "result" - main */
+.result {
+  display: flex;
+  flex-direction: column;
 }
 
-.custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #D9D9D9;
+.result__video-container {
+  min-inline-size: 711px;
+  position: relative;
+  padding-bottom: 11px;
+}
+
+.result__video {
+  block-size: 386px;
+  inline-size: 100%;
+  object-fit: cover;
+}
+
+.result__video img, .result__video video {  
+  width: 100%;
+  height: 100%;
+  object-fit: cover;       
+  object-position: center; 
+}
+
+.search-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding-bottom: 9px;
+}
+
+.search-form:last-child {
+  align-items: flex-end;
+}
+
+.search-form__fieldset {
+  border: none;
+}
+
+.search-form__fieldset-title {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  padding-block-end: 5px;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  padding-bottom: 6px;
+}
+
+.search-form__label {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  inline-size: fit-content;
+  cursor: pointer;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.search-form__textfield {
+  cursor: pointer;
+  font-weight: 400;
+  line-height: 22px;
+  font-size: 18px;
+  color: #fff;
+  font-family: "Fira Sans Condensed", sans-serif;
+  background-color: transparent;
+  min-inline-size: 225px;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  border-left: none;
+  border-right: none;
+  appearance: none;
+  padding-bottom: 2px;
+}
+
+.search-form__textfield::placeholder {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
+.search-form__label:has(.search-form__textfield:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.search-form__textfield:active {
+  border-right: 1px solid #fff;
+  border-left: 1px solid #fff;
+}
+
+.search-form__pseudo-checkbox {
+  cursor: pointer;
+  display: block;
+  inline-size: 19px;
+  block-size: 19px;
+  border: 1px solid #fff;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox {
+  position: relative;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::before {
+  content: "";
+  display: block; 
+  inline-size: 15px;
+  block-size: 15px;
+  background-color: #fff;
+  margin: 1px;
+}
+
+.search-form__label:has(.search-form__checkbox:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.search-form__label-text {
+  padding-inline-start: 5px;
+}
+
+.search-form__label:not(:has(.search-form__textfield)):hover {
+  text-decoration: underline;
+}
+
+.search-form__submit-button {
+  padding: 6px 73.5px;
+}
+
+.search-form__submit-button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+/* section "content__details" - main */
+.content__details {
+  block-size: 100%;
+  inline-size: 100%;
+  position: relative;
+}
+
+.title {
+  font-family: "Oswald", sans-serif;
+  font-weight: 700;
+  font-size: 75px;
+  line-height: 0.94;
+  text-transform: uppercase;
+  padding-bottom: 24px;
+}
+
+.content__accent {
+  color: #545050;
+  position: relative;
+}
+
+.content__accent::after {
+  position: relative;
+  top: -5px;
+  left: -3px;
+}
+
+.content__list-container {
+  block-size: 298px; 
+  overflow-y: auto; 
+  position: relative;
+  padding-right: 2px;
+  margin-bottom: 10px;
+}
+
+.content__list-container::-webkit-scrollbar {
+  width: 4px; 
+}
+
+.content__list-container::-webkit-scrollbar-track {
+  background: #D9D9D91A;
+}
+
+.content__list-container::-webkit-scrollbar-thumb {
+  background: #D9D9D9;
+}
+
+.content__list { 
+  position: relative; 
+}
+
+/* template "preloader-template" */
+.preloader {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #545050;
+}
+
+.preloader-chasing-squares {
+  width: 50px;
+  height: 50px;
+  line-height: 19px;
+}
+
+.preloader-chasing-squares .square {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  opacity: 1;
+  background: #fff;
+}
+
+.preloader-chasing-squares .square:nth-child(2) {
+  animation-delay: 0.7s;
+}
+
+.preloader-chasing-squares .square:nth-child(3) {
+  animation-delay: 2.1s;
+}
+
+.preloader-chasing-squares .square:nth-child(4) {
+  animation-delay: 1.4s;
+}
+
+/* template "cards-list-item-template" */
+.content__list-item:not(:last-child) {
+  padding-block-end: 31px;
+}
+
+.content__card-link {
+  display: block;
+  text-decoration: none;
+  color: #fff;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+  margin: 2px;
+}
+
+.content__card-link_current {
+  background: rgba(84, 80, 80, 1);
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+}
+
+.content__card-link:active {
+  background-color: rgba(84, 80, 80, 1);
+}
+
+.content__video-card {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: flex-start;
+}
+
+.content__video-card-description-container {
+  padding-inline-start: 0px;
+}
+
+.content__video-card-title {
+  font-family: "Oswald", sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 100%;
+  gap: 6px;
+  text-transform: uppercase;
+  padding-top: 2px;
+  padding-block-end: 3px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 196px;         
+  max-width: 196px;
+}
+
+.content__video-card-description {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 400;
+  line-height: 16.2px;
+  size: 18px;
+}
+
+.content__video-card-thumbnail {
+  display: block;
+  justify-self: end;
+  inline-size: 194px;
+  height: 102px;
+  object-fit: cover;
+  object-position: center;
+}
+
+/* template "more-button-template" */
+.button {
+  cursor: pointer;
+  font-size: 18px;
+  color: #fff;
+  font-family: "Fira Sans Condensed", sans-serif;
+  background-color: transparent;
+  font-weight: 700;
+  line-height: 21px;
+  border: 1px solid #fff;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:hover {
+  text-decoration: underline;
+}
+
+.button:active {
+  background-color: rgba(84, 80, 80, 1);
+}
+
+.more-button {
+  padding: 5.5px 141px;
+  margin-top: 32px;
+}
+
+.more-button:focus-visible {
+  margin: 2px;
+  padding: 5.5px 140px;
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+/* template "error-template" */
+.error {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #545050;
+  max-height: 386px;
+}
+
+.error__title {
+  color: #fff;
+  font-family: Oswald, sans-serif;
+  font-size: 30px;
+  text-align: center;
+  text-transform: uppercase;
 }
