--- a/styles/style.css
+++ b/styles/style.css
@@ -43,6 +43,10 @@ ol {
 }
 
 .content {
+  max-width: 1140px;
+  max-height: 534px;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: row;
   align-items: flex-end;
@@ -196,11 +200,6 @@ ol {
   padding: 6px 73.5px;
 }
 
-.search-form__submit-button:focus-visible {
-  outline: 1px solid #fff;
-  outline-offset: 1px;
-}
-
 /* section "content__details" - main */
 .content__details {
   block-size: 100%;
@@ -220,12 +219,6 @@ ol {
 .content__accent {
   color: #545050;
   position: relative;
-}
-
-.content__accent::after {
-  position: relative;
-  top: -5px;
-  left: -3px;
 }
 
 .content__list-container {
@@ -343,7 +336,7 @@ ol {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  width: 196px;         
+  width: 100%;         
   max-width: 196px;
 }
 
@@ -392,7 +385,7 @@ ol {
   margin-top: 32px;
 }
 
-.more-button:focus-visible {
+.button:focus-visible {
   margin: 2px;
   padding: 5.5px 140px;
   outline: 1px solid #fff;
