--- a/styles/style.css
+++ b/styles/style.css
@@ -44,9 +44,7 @@ ol {
 
 .content {
   max-width: 1140px;
-  max-height: 534px;
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: row;
   align-items: flex-end;
@@ -63,7 +61,7 @@ ol {
 .result__video-container {
   min-inline-size: 711px;
   position: relative;
-  padding-bottom: 11px;
+  margin-bottom: 11px;
 }
 
 .result__video {
@@ -83,7 +81,6 @@ ol {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: flex-start;
   padding-bottom: 9px;
 }
 
@@ -343,7 +340,8 @@ ol {
 .content__video-card-description {
   font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
-  line-height: 16.2px;
+  /* line-height: 16.2px; */
+  line-height: 100%;
   size: 18px;
 }
 
@@ -405,7 +403,7 @@ ol {
 
 .error__title {
   color: #fff;
-  font-family: Oswald, sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 30px;
   text-align: center;
   text-transform: uppercase;
